5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1836_1276.log
== SUBMITION (2019-07-01 19:47:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(eval)input("digite: "))
vet = zeros(shape(mat[1], dtype=int))

for i in range(shape(mat)[0]):
	vet[j] = mat[i,j] + 1
	
for i in range(size(vet)):
	if(vet[i]==max(vet)):
		print(i+1)
-- EXECUTION TIME:
0.899614
-- ERROR:
  File "/home/codebench/codes/1836/1276/main.py", line 4
    mat = array(eval(eval)input())
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:47:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(eval)input("digite: "))
vet = zeros(shape(mat[1], dtype=int))

for i in range(shape(mat)[0]):
	vet[j] = mat[i,j] + 1
	
for i in range(size(vet)):
	if(vet[i]==max(vet)):
		print(i+1)
-- EXECUTION TIME:
0.675724
-- ERROR:
  File "/home/codebench/codes/1836/1276/main.py", line 4
    mat = array(eval(eval)input())
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:47:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(eval)input("digite: "))
vet = zeros(shape(mat[1], dtype=int))

for i in range(shape(mat)[0]):
	vet[j] = mat[i,j] + 1
	
for i in range(size(vet)):
	if(vet[i]==max(vet)):
		print(i+1)
-- ERROR:
File "XXXX", line 4
    mat = array(eval(eval)input())
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:47:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(eval(input("digite: ")))
vet = zeros(shape(mat[1], dtype=int))

for i in range(shape(mat)[0]):
	vet[j] = mat[i,j] + 1
	
for i in range(size(vet)):
	if(vet[i]==max(vet)):
		print(i+1)
-- EXECUTION TIME:
0.630094
-- ERROR:
  File "/home/codebench/codes/1836/1276/main.py", line 5
    vet = zeros(shape(mat[1], dtype=int))
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:47:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(eval(input("digite: ")))
vet = zeros(shape(mat[1], dtype=int))

for i in range(shape(mat)[0]):
	vet[j] = mat[i,j] + 1
	
for i in range(size(vet)):
	if(vet[i]==max(vet)):
		print(i+1)
-- ERROR:
File "XXXX", line 5
    vet = zeros(shape(mat[1], dtype=int))
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:48:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(eval(input("digite: ")))
vet = zeros(shape(mat[1], dtype=int)

for i in range(shape(mat)[0]):
	vet[j] = mat[i,j] + 1
	
for i in range(size(vet)):
	if(vet[i]==max(vet)):
		print(i+1)
-- EXECUTION TIME:
0.831964
-- ERROR:
  File "/home/codebench/codes/1836/1276/main.py", line 5
    vet = zeros(shape(mat[1], dtype=int)
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:48:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(eval(input("digite: ")))
vet = zeros(shape(mat[1], dtype=int)

for i in range(shape(mat)[0]):
	vet[j] = mat[i,j] + 1
	
for i in range(size(vet)):
	if(vet[i]==max(vet)):
		print(i+1)
-- ERROR:
File "XXXX", line 5
    vet = zeros(shape(mat[1], dtype=int)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:48:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(eval(input("digite: ")))
vet = zeros(shape(mat)[1], dtype=int)

for i in range(shape(mat)[0]):
	vet[j] = mat[i,j] + 1
	
for i in range(size(vet)):
	if(vet[i]==max(vet)):
		print(i+1)
-- EXECUTION TIME:
0.672791
-- ERROR:
  File "/home/codebench/codes/1836/1276/main.py", line 5
    vet = zeros(shape(mat)[1], dtype=int)
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:48:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(eval(input("digite: ")))
vet = zeros(shape(mat)[1], dtype=int)

for i in range(shape(mat)[0]):
	vet[j] = mat[i,j] + 1
	
for i in range(size(vet)):
	if(vet[i]==max(vet)):
		print(i+1)
-- ERROR:
File "XXXX", line 5
    vet = zeros(shape(mat)[1], dtype=int)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:49:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(eval(input("digite: ")))
vet = zeros(shape(mat)[1], dtype=int)

for j in range(7):
	for i in range(shape(mat)[0]):
		vet[j] = mat[i,j] + 1
	
for i in range(size(vet)):
	if(vet[i]==max(vet)):
		print(i+1)
-- EXECUTION TIME:
0.909375
-- ERROR:
  File "/home/codebench/codes/1836/1276/main.py", line 5
    vet = zeros(shape(mat)[1], dtype=int)
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:50:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(eval(input("digite: ")))
vet = zeros(shape(mat)[1], dtype=int)

for j in range(7):
	for i in range(shape(mat)[0]):
		vet[j] = mat[i,j] + 1
	
for i in range(size(vet)):
	if(vet[i]==max(vet)):
		print(i+1)
-- ERROR:
File "XXXX", line 5
    vet = zeros(shape(mat)[1], dtype=int)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:50:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))
vet = zeros(shape(mat)[1], dtype=int)

for j in range(7):
	for i in range(shape(mat)[0]):
		vet[j] = mat[i,j] + 1
	
for i in range(size(vet)):
	if(vet[i]==max(vet)):
		print(i+1)
-- EXECUTION TIME:
1.23036
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
5
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:50:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))
vet = zeros(shape(mat)[1], dtype=int)

for j in range(7):
	for i in range(shape(mat)[0]):
		vet[j] = mat[i,j] + 1
	
for i in range(size(vet)):
	if(vet[i]==max(vet)):
		print(i+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 19:51:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("digite: ")))
vet = zeros(shape(mat)[1], dtype=int)

for j in range(7):
	for i in range(shape(mat)[0]):
		vet[j] += mat[i,j] 
	
for i in range(size(vet)):
	if(vet[i]==max(vet)):
		print(i+1)
-- EXECUTION TIME:
1.04033
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
